welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:18: error: expected class or object definition
def isFacingTrail(c:Color): Boolean = { 
^SlugSnail:23: error: Unmatched closing brace '}' ignored here
}
^